...
      <Controller
        name="email"
        control={control}
        render={({ field }) => (
          <AppTextInput
            wrapperStyle={tailwind('py-0')}
            testID="email-input"
            onChangeText={(text) => {
              field.onChange(text);
            }}
            status={getEmailError()}
            onSubmitEditing={() => passwordInputRef.current?.focus()}
            value={field.value}
...
        name="password"
        control={control}
        render={({ field }) => (
          <AppTextInput
            inputRef={passwordInputRef}
            wrapperStyle={tailwind('py-0')}
            testID="password-input"
            onChangeText={field.onChange}
            value={field.value}
            style={tailwind('h-11')}
            containerStyle={tailwind('mb-3')}
            placeholder={strings.inputs.password}
            status={[getPasswordStatus(), renderPasswordStrengthMeter()]}
...
